--- a/odoo/unite/dev/unite/views/views.xml
+++ b/odoo/unite/dev/unite/views/views.xml
@@ -1,29 +1,28 @@
-<?xml version="1.0" encoding="utf-8"?>
 <odoo>
   <data>
     <!-- explicit list view definition -->
-    <record model="ir.ui.view" id="unite.start">
-      <field name="name">UNITE landing</field>
-      <field name="model">unite.core</field>
+    <!--
+    <record model="ir.ui.view" id="unite.list">
+      <field name="name">unite list</field>
+      <field name="model">unite.unite</field>
       <field name="arch" type="xml">
-        <form id="startView" class="startView">
-            <t t-call="coreTemplate">
-              <div id="startDiv">
-
-              </div>
-            </t>
-        </form>
+        <tree>
+          <field name="name"/>
+          <field name="value"/>
+          <field name="value2"/>
+        </tree>
       </field>
     </record>
+    -->
 
     <!-- actions opening views on models -->
-
+    <!--
     <record model="ir.actions.act_window" id="unite.action_window">
-      <field name="name">UNITE window</field>
-      <field name="res_model">unite.core</field>
-      <field name="view_mode">form</field>
+      <field name="name">unite window</field>
+      <field name="res_model">unite.unite</field>
+      <field name="view_mode">tree,form</field>
     </record>
-
+    -->
 
     <!-- server action to the one above -->
     <!--
@@ -41,13 +40,13 @@
     -->
 
     <!-- Top menu item -->
-
-    <menuitem name="UNITE" id="unite.menuRoot"/>
-
+    <!--
+    <menuitem name="unite" id="unite.menu_root"/>
+    -->
     <!-- menu categories -->
-
-    <menuitem name="Start" id="unite.menuSub" parent="unite.menuRoot"/>
-     <!--  <menuitem name="Menu 2" id="unite.menu_2" parent="unite.menu_root"/>
+    <!--
+    <menuitem name="Menu 1" id="unite.menu_1" parent="unite.menu_root"/>
+    <menuitem name="Menu 2" id="unite.menu_2" parent="unite.menu_root"/>
     -->
     <!-- actions -->
     <!--
