--- a/odoo/unite/dev/unite_backend/static/src/less/main.less
+++ b/odoo/unite/dev/unite_backend/static/src/less/main.less
@@ -1,4 +1,4 @@
-/* Copyright 2016 LasLabs Inc.
+/* Copyright 2016 LasLabs Inc.green
  * License LGPL-3.0 or later (http://www.gnu.org/licenses/lgpl). */
 
 body {
