--- a/odoo/unite/dev/unite_backend_theme/static/src/less/sidebar.less
+++ b/odoo/unite/dev/unite_backend_theme/static/src/less/sidebar.less
@@ -7,7 +7,7 @@
 
 .app-sidebar-panel {
     .o-flex(0, 0, @odoo-sidebar-width);
-    background-color: #337AB7;
+    background-color: #333333;
     height: 100% !important;
     overflow-y: auto;
     @media (max-width: @screen-sm-min) {
