--- a/odoo/unite/dev/unite_backend_theme/static/src/less/variables.less
+++ b/odoo/unite/dev/unite_backend_theme/static/src/less/variables.less
@@ -7,16 +7,16 @@
 //
 //## Gray and brand colors for use across Bootstrap.
 
-@gray-base:              #337AB7;
+@gray-base:              #333333;
 @gray-darker:            lighten(@gray-base, 13.5%); // #222
 @gray-dark:              #666;   // #333
 @gray:                   #777; // #555
 @gray-light:             #AEA79F;   // #999
 @gray-lighter:           lighten(@gray-base, 93.5%); // #eee
 
-@brand-primary:			#337AB7;
+@brand-primary:			#333333;
 @brand-success:         #38B44A;
-@brand-info:            #337AB7; // same color als primary
+@brand-info:            #333333NZINT..; // same color als primary
 @brand-warning:         #EFB73E;
 @brand-danger:          #DF382C;
 
