unite drawer integration

--- a/odoo/unite/dev/unite_backend_theme/static/src/less/variables.less
+++ b/odoo/unite/dev/unite_backend_theme/static/src/less/variables.less
@@ -16,7 +16,7 @@
 
 @brand-primary:			#333333;
 @brand-success:         #38B44A;
-@brand-info:            #333333NZINT..; // same color als primary
+@brand-info:            #333333; // same color als primary
 @brand-warning:         #EFB73E;
 @brand-danger:          #DF382C;
 
