--- a/odoo/unite/dev/unite_knowledge_base/views/views.xml
+++ b/odoo/unite/dev/unite_knowledge_base/views/views.xml
@@ -2,9 +2,9 @@
   <data>
     <!-- explicit list view definition -->
     <!--
-    <record model="ir.ui.view" id="unit_knowledge_base.list">
+    <record model="ir.ui.view" id="unite_knowledge_base.list">
       <field name="name">unit_knowledgeBase list</field>
-      <field name="model">unit_knowledge_base.unit_knowledge_base</field>
+      <field name="model">unite_knowledge_base.unite_knowledge_base</field>
       <field name="arch" type="xml">
         <tree>
           <field name="name"/>
@@ -17,16 +17,16 @@
 
     <!-- actions opening views on models -->
     <!--
-    <record model="ir.actions.act_window" id="unit_knowledge_base.action_window">
+    <record model="ir.actions.act_window" id="unite_knowledge_base.action_window">
       <field name="name">unit_knowledgeBase window</field>
-      <field name="res_model">unit_knowledge_base.unit_knowledge_base</field>
+      <field name="res_model">unite_knowledge_base.unite_knowledge_base</field>
       <field name="view_mode">tree,form</field>
     </record>
     -->
 
     <!-- server action to the one above -->
     <!--
-    <record model="ir.actions.server" id="unit_knowledge_base.action_server">
+    <record model="ir.actions.server" id="unite_knowledge_base.action_server">
       <field name="name">unit_knowledgeBase server</field>
       <field name="model_id" ref="model_unit_knowledge_base_unit_knowledge_base"/>
       <field name="code">
@@ -41,19 +41,19 @@
 
     <!-- Top menu item -->
     <!--
-    <menuitem name="unit_knowledgeBase" id="unit_knowledge_base.menu_root"/>
+    <menuitem name="unit_knowledgeBase" id="unite_knowledge_base.menu_root"/>
     -->
     <!-- menu categories -->
     <!--
-    <menuitem name="Menu 1" id="unit_knowledge_base.menu_1" parent="unit_knowledge_base.menu_root"/>
-    <menuitem name="Menu 2" id="unit_knowledge_base.menu_2" parent="unit_knowledge_base.menu_root"/>
+    <menuitem name="Menu 1" id="unite_knowledge_base.menu_1" parent="unite_knowledge_base.menu_root"/>
+    <menuitem name="Menu 2" id="unite_knowledge_base.menu_2" parent="unite_knowledge_base.menu_root"/>
     -->
     <!-- actions -->
     <!--
-    <menuitem name="List" id="unit_knowledge_base.menu_1_list" parent="unit_knowledge_base.menu_1"
-              action="unit_knowledge_base.action_window"/>
-    <menuitem name="Server to list" id="unit_knowledge_base" parent="unit_knowledge_base.menu_2"
-              action="unit_knowledge_base.action_server"/>
+    <menuitem name="List" id="unite_knowledge_base.menu_1_list" parent="unite_knowledge_base.menu_1"
+              action="unite_knowledge_base.action_window"/>
+    <menuitem name="Server to list" id="unite_knowledge_base" parent="unite_knowledge_base.menu_2"
+              action="unite_knowledge_base.action_server"/>
     -->
   </data>
 </odoo>
