--- a/odoo/unite/dev/unite_kb_category/views/views.xml
+++ b/odoo/unite/dev/unite_kb_category/views/views.xml
@@ -1,59 +1,168 @@
 <odoo>
-  <data>
-    <!-- explicit list view definition -->
-    <!--
-    <record model="ir.ui.view" id="unite_kb_category.list">
-      <field name="name">unite_kb_category list</field>
-      <field name="model">unite_kb_category.unite_kb_category</field>
-      <field name="arch" type="xml">
-        <tree>
-          <field name="name"/>
-          <field name="value"/>
-          <field name="value2"/>
-        </tree>
-      </field>
-    </record>
-    -->
+	<data>
+		<!-- explicit list view definition -->
+		<!--
+				<record id="unite_kb_category_form" model="ir.ui.view">
+					<field name="name">unite.kb.category.form</field>
+					<field name="model">unite.kb</field>
+					<field name="arch" type="xml">
+						<form string="Category Form" class="o_container" name="mainFormCategory">
+							<div name="header" class="oe_header">
+								<header>
 
-    <!-- actions opening views on models -->
-    <!--
-    <record model="ir.actions.act_window" id="unite_kb_category.action_window">
-      <field name="name">unite_kb_category window</field>
-      <field name="res_model">unite_kb_category.unite_kb_category</field>
-      <field name="view_mode">tree,form</field>
-    </record>
-    -->
+								</header>
+							</div>
+							<div name="sheet" string="mainSheetForm">
 
-    <!-- server action to the one above -->
-    <!--
-    <record model="ir.actions.server" id="unite_kb_category.action_server">
-      <field name="name">unite_kb_category server</field>
-      <field name="model_id" ref="model_unite_kb_category_unite_kb_category"/>
-      <field name="code">
-        action = {
-          "type": "ir.actions.act_window",
-          "view_mode": "tree,form",
-          "res_model": self._name,
-        }
-      </field>
-    </record>
-    -->
+									<div class="oe_left" name="ukbc_sheet">
+										<div class="oe_title">
+											<h1>
+												<field name="categoryTitle" placeholder="Category Name" required="True"/>
+											</h1>
+											<field name="catTags" placeholder="Tags" widget="many2many_tags"/>
+											<field placeholder="Customer" string="Customer" name="customer"
+												   widget="many2many_tags"/>
+										</div>
 
-    <!-- Top menu item -->
-    <!--
-    <menuitem name="unite_kb_category" id="unite_kb_category.menu_root"/>
-    -->
-    <!-- menu categories -->
-    <!--
-    <menuitem name="Menu 1" id="unite_kb_category.menu_1" parent="unite_kb_category.menu_root"/>
-    <menuitem name="Menu 2" id="unite_kb_category.menu_2" parent="unite_kb_category.menu_root"/>
-    -->
-    <!-- actions -->
-    <!--
-    <menuitem name="List" id="unite_kb_category.menu_1_list" parent="unite_kb_category.menu_1"
-              action="unite_kb_category.action_window"/>
-    <menuitem name="Server to list" id="unite_kb_category" parent="unite_kb_category.menu_2"
-              action="unite_kb_category.action_server"/>
-    -->
-  </data>
+									</div>
+
+									<div class="oe_inline oe_right">
+										<h5>
+											<field name="subCategory" placeholder="Sub-Category Name"
+												   widget="many2one_selection"/>
+											<field name="masterCategory" placeholder="Master-Category Name"
+												   widget="many2one_selection"/>
+										</h5>
+										<field string="Creator:" name="catOwner" placeholder="Creator:" readonly="True"/>
+									</div>
+
+								<notebook string="notebook" name="nb">
+
+									<page string="Categories" name="listTab">
+																	<tree class="table">
+											<field name="categoryTitle" string="Category Title"/>
+											<field name="subCategory" string="Child Category"/>
+											<field name="masterCategory" string="Parent Category"/>
+											<field name="forCustomer" string="Released"/>
+										</tree>
+									</page>
+								</notebook>
+
+
+
+							</div>
+
+						</form>
+
+					</field>
+				</record>
+
+
+
+				 actions opening views on models --><!--
+		<record id="unite_kb_category_winAct" model="ir.actions.act_window">
+			<field name="name">Unite KB Categories</field>
+			<field name="type">ir.actions.act_window</field>
+			<field name="res_model">unite.kb</field>
+			<field name="view_type">form</field>
+			<field name="view_mode">tree</field>
+
+			</field>
+		</record>
+		<record id="unite_kb_category_winAct_form" model="ir.actions.act_window">
+			<field name="name">Unite KB New Category</field>
+			<field name="type">ir.actions.act_window</field>
+			<field name="res_model">unite.kb</field>
+			<field name="view_type">form</field>
+			<field name="view_mode">form,tree</field>
+			<field name="target">new</field>
+
+			<field name="help" type="html">
+
+			</field>
+		</record>
+-->
+		<!-- server action to the one above -->
+		<!--
+		<record model="ir.actions.server" id="unite_kb_category.action_server">
+		  <field name="name">unite_kb_category server</field>
+		  <field name="model_id" ref="model_unite_kb_category_unite_kb_category"/>
+		  <field name="code">
+			action = {
+			  "type": "ir.actions.act_window",
+			  "view_mode": "tree,form",
+			  "res_model": self._name,
+			}
+		  </field>
+		</record>
+		-->
+
+		<record id="mainTree" model="ir.ui.view">
+			<field name="name">unite.kb.cat.maintree</field>
+			<field name="model">unite.kb</field>
+			<field name="arch" type="xml">
+
+				<tree string="Categories" editable="bottom">
+					<field name="categoryTitle" string="Category Title" required="True"/>
+					<field name="subCategory" string="Child Category"/>
+					<field name="masterCategory" string="Parent Category"/>
+					<field name="customer" string="Customer" widget="many2many_tags"/>
+					<field name="forCustomer" string="Released"/>
+					<field name="catTags" string="Tags" widget="many2many_tags"/>
+					<field string="Creator" name="catOwner" readonly="True"/>
+				</tree>
+			</field>
+		</record>
+
+
+		<record id="ukb_view_treeAction" model="ir.actions.act_window">
+			<field name="name">Unite Knowledge Base</field>
+			<field name="type">ir.actions.act_window</field>
+			<field name="res_model">unite.kb</field>
+			<field name="view_mode">tree</field>
+			<field name="help" type="html">
+				<p class="oe_view_nocontent_create">
+					<!-- Add Text Here -->
+				</p>
+				<p>
+					<!-- More details about what a user can do with this object will be OK -->
+				</p>
+			</field>
+		</record>
+
+		<record id="ukb_view_treeAction_Modal" model="ir.actions.act_window">
+			<field name="name">Unite Knowledge Base</field>
+			<field name="type">ir.actions.act_window</field>
+			<field name="res_model">unite.kb</field>
+			<field name="view_mode">tree</field>
+			<field name="target">new</field>
+			<field name="help" type="html">
+				<p class="oe_view_nocontent_create">
+					<!-- Add Text Here -->
+				</p>
+				<p>
+					<!-- More details about what a user can do with this object will be OK -->
+				</p>
+			</field>
+		</record>
+		<!-- Top menu item -->
+
+		<menuitem name="UNITE KB Categories" id="ukbc_menu_root"/>
+
+		<!-- menu categories -->
+
+		<menuitem name="Categories" id="ukbc_menu_1" parent="ukbc_menu_root" action="ukb_view_treeAction"/>
+		<menuitem name="List-Modal" id="ukbc_menu_2" parent="ukbc_menu_root" action="ukb_view_treeAction_Modal"/>
+
+		<!--
+		<menuitem name="Menu 2" id="unite_kb_category.menu_2" parent="unite_kb_category.menu_root"/>
+		-->
+		<!-- actions -->
+		<!--
+		<menuitem name="List" id="unite_kb_category.menu_1_list" parent="unite_kb_category.menu_1"
+				  action="unite_kb_category.action_window"/>
+		<menuitem name="Server to list" id="unite_kb_category" parent="unite_kb_category.menu_2"
+				  action="unite_kb_category.action_server"/>
+		-->
+	</data>
 </odoo>
