--- a/odoo/unite/dev/unite_kb/views/views.xml
+++ b/odoo/unite/dev/unite_kb/views/views.xml
@@ -1,34 +1,61 @@
 <odoo>
   <data>
-    <!-- explicit list view definition -->
-    <!--
-    <record model="ir.ui.view" id="unite_kb.list">
+
+    <record model="ir.ui.view" id="unite_kb_list">
       <field name="name">unite_kb list</field>
-      <field name="model">unite_kb.unite_kb</field>
+      <field name="model">unite.kb</field>
       <field name="arch" type="xml">
         <tree>
-          <field name="name"/>
-          <field name="value"/>
-          <field name="value2"/>
+          <field name="ArtTitle"/>
+          <field name="Author"/>
+          <field name="CreatedAt"/>
+          <field name="Description"/>
+          <field name="Version"/>
+          <field name="Status"/>
+          <field name="LastEditedBy"/>
+          <field name="Problem"/>
+          <field name="Symptoms"/>
+          <field name="Solutions"/>
+          <field name="Inform"/>
         </tree>
       </field>
     </record>
-    -->
 
-    <!-- actions opening views on models -->
-    <!--
-    <record model="ir.actions.act_window" id="unite_kb.action_window">
+        <record model="ir.ui.view" id="unite_kb_form">
+      <field name="name">unite_kb form</field>
+      <field name="model">unite.kb</field>
+      <field name="arch" type="xml">
+        <form>
+          <header>
+            <field name="Status" widget="statusbar"
+    statusbar_visible="draft,sent,progress,invoiced,done"/>
+          </header>
+          <field name="ArtTitle"/>
+          <field name="Author"/>
+          <field name="CreatedAt"/>
+          <field name="Description"/>
+          <field name="Version"/>
+          <field name="Status"/>
+          <field name="LastEditedBy"/>
+          <field name="Problem"/>
+          <field name="Symptoms"/>
+          <field name="Solutions"/>
+          <field name="Inform"/>
+        </form>
+      </field>
+    </record>
+
+    <record model="ir.actions.act_window" id="unite_kb_action_window">
       <field name="name">unite_kb window</field>
-      <field name="res_model">unite_kb.unite_kb</field>
+      <field name="res_model">unite.kb</field>
       <field name="view_mode">tree,form</field>
     </record>
-    -->
 
-    <!-- server action to the one above -->
-    <!--
-    <record model="ir.actions.server" id="unite_kb.action_server">
+<!--
+
+    <record model="ir.actions.server" id="unite_kb_action_server">
       <field name="name">unite_kb server</field>
-      <field name="model_id" ref="model_unite_kb_unite_kb"/>
+      <field name="model_id" ref="unite.kb"/>
       <field name="code">
         action = {
           "type": "ir.actions.act_window",
@@ -37,23 +64,18 @@
         }
       </field>
     </record>
-    -->
 
-    <!-- Top menu item -->
-    <!--
-    <menuitem name="unite_kb" id="unite_kb.menu_root"/>
-    -->
-    <!-- menu categories -->
-    <!--
-    <menuitem name="Menu 1" id="unite_kb.menu_1" parent="unite_kb.menu_root"/>
-    <menuitem name="Menu 2" id="unite_kb.menu_2" parent="unite_kb.menu_root"/>
-    -->
-    <!-- actions -->
-    <!--
-    <menuitem name="List" id="unite_kb.menu_1_list" parent="unite_kb.menu_1"
-              action="unite_kb.action_window"/>
-    <menuitem name="Server to list" id="unite_kb" parent="unite_kb.menu_2"
-              action="unite_kb.action_server"/>
-    -->
+-->
+
+    <menuitem name="unite_kb" id="unite_kb_menu_root"/>
+
+
+    <menuitem name="Menu 1" id="unite_kb_menu_1" parent="unite_kb_menu_root"/>
+
+
+
+    <menuitem name="List" id="unite_kb_enu_1_list" parent="unite_kb_menu_1"
+              action="unite_kb_action_window"/>
+
   </data>
 </odoo>
