--- a/odoo/unite/dev/unite_kb/views/templates.xml
+++ b/odoo/unite/dev/unite_kb/views/templates.xml
@@ -1,5 +1,9 @@
 <odoo>
     <data>
-
+        <template id="assets_backend" inherit_id="web.assets_backend">
+            <xpath expr="." position="inside">
+                <link rel="stylesheet" href="/unite_kb/static/src/css/style.css"/>
+            </xpath>
+        </template>
     </data>
 </odoo>
